Added mail requests to Dashboard component and brought in more schemas for openapi
