# backend/src/app.js
@@ -8,6 +8,7 @@ const OpenApiValidator = require('express-openapi-validator');
 
 const dummy = require('./dummy');
 const auth = require('./auth');
+const mail = require('./mail');
 
 const app = express();
 app.use(cors());
@@ -31,6 +32,13 @@ app.get('/v0/dummy', dummy.get);
 // Your routes go here
 app.post('/v0/login', auth.login);
 app.post('/v0/register', auth.register);
+
+app.get('/v0/email', auth.check, mail.getAll);
+app.get('/v0/email/:id', auth.check, mail.getById);
+// moving email
+app.put('/v0/email/:id', auth.check, mail.trashEmail);
+
+app.post('/v0/email', auth.check, mail.postEmail);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
